<resources>

    <!-- **************** Settings *************************************-->
    <string name="preferred_tab">preferredTab</string>
    <!--****************************************************************-->

    <string name="app_name">AdjustmentDB</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_temp">MainActivityTemp</string>
    <!--    <string name="tab_text_1">Single\nscan</string>-->
    <!--    <string name="tab_text_2">Search in DB</string>-->
    <!--    <string name="tab_text_3">Multi scan</string>-->
    <string name="add_states">Добавить новый статус для устройств:</string>
    <string name="add_type">Добавить тип устройства:</string>
    <string name="add_description">Добавить описание</string>
    <string name="cancel">Отмена</string>
    <string name="ok">ОК</string>
    <string name="add_state">Добавить новый статус для устройства:</string>
    <string name="next">Дальше</string>


    <string name="device_set_doted">Комплект:</string>
    <string name="device_type_doted">Тип устройства:</string>
    <string name="inner_serial_doted">Внутренний номер:</string>
    <string name="serial_number_doted">Серийный номер:</string>
    <string name="id_doted">id:</string>
    <string name="identifier">Идентификатор:</string>
    <string name="employee_doted">Ответственный:</string>
    <string name="location_doted">Локация:</string>
    <string name="add_state_doted">Добавить статус:</string>

    <string name="inner_serial">Внутренний номер</string>
    <string name="serial_number">Серийный номер</string>
    <string name="id">id</string>
    <string name="employee">Ответственный</string>
    <string name="location">Локация</string>

    <string name="add_state_button">Добавить статус</string>
    <string name="open_search_button">Открыть диалог поиска</string>

    <string name="tab_text_1">Одиночное\nсканирование</string>
    <string name="tab_text_2">Поиск\nустройства</string>
    <string name="tab_text_3">Множественное\nсканирование</string>
    <string name="set_text_1">Одиночное сканирование</string>
    <string name="set_text_2">Поиск устройства</string>
    <string name="set_text_3">Множественное сканирование</string>

    <string name="new_name">Название</string>
    <string name="show">Показать</string>
    <string name="nothing_found">Ничего не найдено!</string>
    <string name="serial">Серия</string>
    <string name="repair">Ремонт</string>
    <string name="app_logo">Логотип приложения</string>
    <string name="state_doted">Статус:</string>
    <string name="found_count">Найдено устройств: %d</string>
    <string name="tap_description">Чтобы очистить распознанное значение, нужно тапнуть по нему</string>
    <string name="name_already_recognized">У устройства уже есть имя</string>
    <string name="serial_already_recognized">У устройства уже есть серийный номер</string>
    <string name="days_in_work">Дней в работе</string>
    <string name="add_employee_doted">Добавить ответственного:</string>
    <string name="manual_params_description">Если имя и/или серийный не выбраны, то устройству будут присвоены распознанные значения. Если параметры выбрать руками, то распознанные значения будут проигнорированы, устройство будет сохранено с параметрами выбранными вручную</string>
    <string name="trackid_doted">TrackId:</string>
    <string name="trackid">TrackId</string>
<!--    <string name="title_activity_settings" />--> <!--о как-->
    <string name="title_activity_settings">Настройки</string>
    <string name="auto_start_dialog">auto_start_dialog</string>

</resources>