<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_gravity="center"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:layout_margin="20dp">

    <TextView
        style="@style/dialogTextLabel"
        android:id="@+id/dialogNewNameLabel"
        android:text="@string/add_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/newName"
        />

    <Spinner
        android:id="@+id/newName"
        style="@style/dialogSpinner"
        android:layout_width="0dp"
        android:layout_marginStart="5dp"
        android:textSize="20sp"
        android:textColor="@color/main_orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dialogNewNameLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dName"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text = "AT1630"
        android:textSize="20sp"
        android:textColor="@color/main_orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newName" />

    <TextView
        style="@style/dialogTextLabel"
        android:id="@+id/dialogInnerLabel"
        android:text="@string/inner_serial_doted"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/dInner"
        />

    <EditText
        android:id="@+id/dInner"
        style="@style/dialogEditText"
        android:hint="@string/inner_serial"
        android:layout_width="0dp"
        android:layout_marginStart="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dialogInnerLabel"
        app:layout_constraintTop_toBottomOf="@+id/dName"
        android:importantForAutofill="no"
        android:inputType="number" />

    <TextView
        style="@style/dialogTextLabel"
        android:id="@+id/dialogSerialLabel"
        android:text="@string/serial_number_doted"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/dSerial"
        />

    <EditText
        android:id="@+id/dSerial"
        style="@style/dialogEditText"
        android:hint="@string/serial_number"
        android:layout_width="0dp"
        android:layout_marginStart="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dialogSerialLabel"
        app:layout_constraintTop_toBottomOf="@+id/dInner"
        android:importantForAutofill="no"
        android:inputType="text" />

    <TextView
        style="@style/dialogTextLabel"
        android:id="@+id/dialogEmployeeLabel"
        android:text="@string/employee_doted"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/state_spinner_employee"
        />

    <Spinner
        android:id="@+id/state_spinner_employee"
        style="@style/dialogSpinner"
        android:layout_width="0dp"
        android:layout_marginStart="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dialogEmployeeLabel"
        app:layout_constraintTop_toBottomOf="@+id/dSerial" />

    <TextView
        style="@style/dialogTextLabel"
        android:id="@+id/dialogStateLabel"
        android:text="@string/add_state_doted"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/state_spinner"
        />

    <Spinner
        android:id="@+id/state_spinner"
        style="@style/dialogSpinner"
        android:layout_width="0dp"
        android:layout_marginStart="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dialogStateLabel"
        app:layout_constraintTop_toBottomOf="@+id/state_spinner_employee" />

    <EditText
        android:id="@+id/description"
        style="@style/dialogEditText"
        android:hint="@string/add_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/state_spinner"
        app:layout_constraintBottom_toTopOf="@+id/cancel_button"
        android:importantForAutofill="no"
        android:layout_marginBottom="10dp"
        android:inputType="text" />

    <Button
        android:id="@+id/cancel_button"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textAllCaps="false"
        android:paddingHorizontal="50dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ok_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        style="?android:attr/buttonBarButtonStyle"
        android:textSize="12sp"
        android:textAllCaps="false"
        android:paddingHorizontal="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cancel_button"
        app:layout_constraintEnd_toEndOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>